fixed hour alignment again

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 .textareaStyling2 {
-  height: 1000px !important;
+  height: 300px !important;
 }
 
-#MainBlock {
-  max-width: 1188px !important;
+
+div.mxWidth {
+  max-width: 1251px !important;
 }
